# Rank_scRNASeq_Embeddings

./: .gitignore  LICENSE  README.md  pyproject.toml  sc_utils.toml
environments/: C2S_requirements.txt  geneformer.txt  scFoundation_requirements.txt  scgpt_requirements.txt
scripts/C2S/: C2S_ablation.py  C2S_script.py
scripts/Geneformer/: Geneformer_median_norm.py  geneformer_cell_embeddings.py
scripts/Untrained_embeddings/: untrained_embeddings_cell_separation.py
src/: sc_utils.py
src/sc_utils/: __init__.py  sc_utils.py
src/scripts/C2S/: C2S_ablation.py  C2S_ablation_tabula_sapiens.sh  C2S_possitional_loss.py  C2S_script.py
src/scripts/Geneformer/: Geneformer_script.py  geneformer_loglik.py
src/scripts/Untrained_embeddings/: batch_effect.py
src/scripts/scFoundation/: scFoundation_script.py
src/scripts/scGPT/: scGPT_script.py
src/unt_ranked_embs/: __init__.py  unt_ranked_embs.py
