[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sc_utils"
version = "0.1.2"
dependencies = [
    "numpy",
    "scanpy",
    "matplotlib",
    "scikit-learn",
    "leidenalg",
    "igraph",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sc_utils", "unt_ranked_embs"]